--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js 2025-05-22 2025-05-25"
     },
     "dependencies": {
         "axios": "^1.6.0",
