--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "html2canvas": "^1.4.1",
         "jsdom": "^26.1.0",
         "jspdf": "^2.5.2",
+        "open": "^10.1.2",
         "puppeteer": "^24.8.2"
     }
 }
