--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
 
   "buildpacks": [
     { "url": "heroku/nodejs" },
-    { "url": "https://github.com/heroku/heroku-buildpack-chrome-for-testing" }
+    { "url": "heroku-community/chrome-for-testing" }
   ],
 
   
