--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "cheerio": "^1.0.0",
     "express": "^4.19.2",
+    "jsdom": "^26.1.0",
     "puppeteer": "^24.8.2",
-    "jsdom": "^26.1.0"
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
     "nodemon": "^3"
